--- a/.github/workflows/deploy_surge.yaml
+++ b/.github/workflows/deploy_surge.yaml
@@ -28,5 +28,5 @@ jobs:
     - name: Install surge
       run: npm install -g surge
     - name: Run surge
-      run: surge ./ bootcampnewapp.surge.sh --token ${{secret.SURGE_TOKEN}}
+      run: surge ./ bootcampnewapp.surge.sh --token ${{secrets.SURGE_TOKEN}}
       
