--- a/.github/workflows/deploy_surge.yaml
+++ b/.github/workflows/deploy_surge.yaml
@@ -27,6 +27,6 @@ jobs:
          node-version: 12
     - name: Install surge
       run: npm install -g surge
-    - name: Run surge
+    - name: Run Surge
       run: surge ./ bootcampnewapp.surge.sh --token ${{secrets.SURGE_TOKEN}}
       
