--- a/.github/workflows/deploy_surge.yaml
+++ b/.github/workflows/deploy_surge.yaml
@@ -22,11 +22,11 @@ jobs:
 
     # Runs a single command using the runners shell
     - name: Install NodeJS
-      uses: actions/setup-node@v2-beta
+      uses: actions/setup-node@v2-beta 
       with:
          node-version: 12
     - name: Install Surge
       run: npm install -g surge
     - name: Run Surge
-      run: surge C:\Users\Sam's\Pictures\bootcamp2020 bootcampnewapp.surge.sh --token ${{secrets.SURGE_TOKEN}}
+      run: surge ./ bootcampnewapp.surge.sh --token ${{secrets.SURGE_TOKEN}}
       
